--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axion": "^0.1.0",
     "axios": "^0.18.0",
     "help": "^3.0.2",
     "react": "^16.7.0",
